"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-04-11	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-16-PRS-07-04:
	  grammar: allow prs_literal to take an optional '@' prefix
		for provisional internal-node notation.  
		Token is just ignored and has no impact on rest of front-end.  
	  Minor restructuring to AST/PRS.{h,cc} to accomodate 
		prs_literal_base construction.  
	  Handful of parse expect-fail tests updated.  


	* HACKT-00-01-04-main-00-81-16-PRS-07-03:
	  Minor fix to prev. patch: tree/subckt language bodies are
		only nested inside PRS.  
	  AST/PRS.cc: body::check_build() PRS body items may now be NULL, 
		as returned by ignored language extension constructs.  


2007-04-10	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-16-PRS-07-02:
	  Added new language bodies 'tree' and 'subckt' as per Clint's request
		to support extensions in forked tool-chain.  
	  NOTE: this adds new keywords!!! don't blame me for breakage.  :P
	  Added a few minimal test cases.


2007-04-09	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-16-PRS-07-01:
	  Branchlet to support Clint's proposed PRS annotations.
	  This revision augmented the prs_and and prs_or syntax to support
		an (optional) operator-suffix attribute for precharge notation.
		The tokens, however, are just deleted, and not processed,
			as per request.  
		A scant few test expect-fails updated (yacc-only), no changes
			necessary for bison.  


2007-04-08	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-16:
	  Minor bug fix: lacking diagnostic when redeclaring an instance
		with different meta-type.  Fixed by catching a std::bad_cast.
		Added test-case basic/024.


2007-03-19	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-15: