@@ -1,6 +1,6 @@
 # "Make.test-cflat"
 #	vi: ft=automake
-#	$Id: Make.test-cflat,v 1.7 2007/01/21 22:05:53 fang Exp $
+#	$Id: Make.test-cflat,v 1.7.12.1 2007/04/19 05:17:20 fang Exp $
 # This is just a portion of the Make.test-tail template included by
 # Makefile.am's in the test/ directory subtree.  
 # This depends on variables defined in Make.test-tail, and thus, 
@@ -384,11 +384,18 @@ BOGUS_TESTS += .hacktcflattest .hacktcflatlvstest .hacktcflatlvsfailtest \
 BOGUS_TARGETS += .expect-prs
 
 CHECK_SUMMARIES += prsdiffs prsdiffs.sort \
+	lvsprsdiffs lvsfaildiffs \
 	prsseudiffs prsseudiffs.sort sprsdiffs sprsdiffs.sort
 
 
 prsdiffs: force
 	-$(CAT) *.prsdiff > $@
+
+lvsprsdiffs: force
+	-$(CAT) *.lvsprsdiff > $@
+
+lvsfaildiffs: force
+	-$(CAT) *.lvsfaildiff > $@
 
 prsseudiffs: force
 	-$(CAT) *.prsseu-diff > $@
