@@ -1,6 +1,6 @@
 # "Make.test-prsim"
 #	vi: ft=automake
-#	$Id: Make.test-prsim,v 1.6 2007/02/05 06:40:02 fang Exp $
+#	$Id: Make.test-prsim,v 1.6.8.1 2007/04/19 05:17:21 fang Exp $
 # This is just a portion of the Make.test-tail template included by
 # Makefile.am's in the test/ directory subtree.  
 # This depends on variables defined in Make.test-tail, and thus, 
@@ -165,6 +165,7 @@ prsimrcfail-out.autodepend: Makefile
 -include prsimrc-out.autodepend
 -include prsimrcfail-out.autodepend
 
+# HACK: if the file name has 'random' in it, then filter out timestamps
 PRSIMRC_TEST_FILTER_SCRIPT = \
 	$(CAT) $< | \
 		$(SED) -e '/DELETE FROM HERE/d' -e '/DELETE TO HERE/,$$d' | \
@@ -181,7 +182,8 @@ PRSIMRC_TEST_FILTER_SCRIPT = \
 	@$(PRSIMRC_TEST_FILTER_SCRIPT)
 
 .prsimrcfail-out.prsimrcfail-out-filter:
-	@$(PRSIMRC_TEST_FILTER_SCRIPT)
+	@$(PRSIMRC_FILTER_AWK) $< > $@
+#	@$(PRSIMRC_TEST_FILTER_SCRIPT)
 
 if VERBOSE_CHECK
 ECHO_PRSIMRC_DIFF_COMMAND = $(ECHO) "$(DIFF) -bu $$expect $<"
